frontend/tests/errors/ER-031/fixed_non_native_fractional_cast_not_implemented/test.vx
&^main() -> #i32 {
  x:#u40.4;
  y:#u16.0 = (#u16.0)x;
  0
}
